# Codewars

./: .gitmodules  Makefile  README.md  Readme.md
c/: Makefile  README.md
c/src/: main.c
cpp/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cpp/src/: main.cpp  test.cpp
cpp/src/katas/testing-1-2-3/: solution.cpp  solution_test.cpp
go/: Makefile  README.md  go.mod
go/cmd/main/: main.go
go/src/find_outlier/: Readme.md  kata.go  kata_test.go
go/src/get_middle_chars/: Readme.md  kata.go  kata_test.go
java/: .project  README.md  pom.xml
java/docs/katas/: Counter.md  EndsWith.md  ReverseWords.md
new/: .npmrc  README.md  package-lock.json  package.json  test.tsconfig.json  tsconfig.json
prolog/: README.md
prolog/katas/check_the_exam/: Readme.md  main.pro
prolog/katas/two_oldest_age/: Readme.md  main.pro
prolog/libs/: modulle.pro
python/: .gitignore  Makefile  README.md  main.py  requirements.txt
python/docs/: fortune.md
python/katas/build_tower/: Readme.md  solution.py
python/katas/dont_give_me_five/: solution.py  solution_test.py
python/katas/fortune/: Readme.md  solution.py  solution_test.py
python/katas/go_stone_scolling/: Readme.md  solution.py  solution_test.py
python/src/: test.py
python/take_ten_minutes_walk/: solution_test.py
ruby/: .gitignore  Gemfile  README.md
ruby/lib/: application.rb
ruby/spec/: spec_helper.rb
rust/: Cargo.toml  README.md
rust/src/: lib.rs  main.rs
ts/: .mocharc.json  README.md  package-lock.json  package.json  tsconfig.json
ts/src/: index.ts
(+211 files in other folders)
